resolved signup/login bug

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,9 @@
  </head>
 
  <body>
+
    <div id="total_wrapper">
+    <div id="header"><h1>ArchBlog</h1></div>
 
      <div id="universal_content_wrapper">
          
