--- a/views/login.erb
+++ b/views/login.erb
@@ -1,6 +1,5 @@
-<form method="POST" action="/sign-up">
+<form method="POST" action="/login">
 	<input type="text" name="username">
-	<input type="text" name="email" placeholder="Email">
 	<input type="password" name="password" placeholder="Password">
 	<input type="password" name="confirm_password" placeholder="Confirm Password">
 
