--- a/Public/styles/archblog.css
+++ b/Public/styles/archblog.css
@@ -18,7 +18,23 @@ body {
 
 /*LANDING*/
 
+#landingform {
+	width: 400px;
+	height: 425px;
+	background-color: #CCCCCC;
+	margin: 0px auto;
+	margin-bottom: 100px;
+	margin-top: 100px;
+	border-radius: 10px;
+	border: solid gray 2px;
+	font-size: 24px;
 
+}
+
+form {
+	margin: 10px;
+	text-align: center;
+}
 
 
 /*PROFILE*/
