--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
 
    <script src="archblog.js"></script>
 
-   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
    
 
  </head>
