modified login page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,11 @@
  <body>
 
    <div id="total_wrapper">
-    <div id="header"><h1>ArchBlog</h1></div>
+    <div id="header">
+      <a href="/">
+        <h1>ArchBlog</h1>
+      </a>
+    </div>
 
      <div id="universal_content_wrapper">
          
