--- a/views/login.erb
+++ b/views/login.erb
@@ -1,8 +1,21 @@
-<form method="POST" action="/login">
-	<input type="text" name="username">
-	<input type="password" name="password" placeholder="Password">
-	<input type="password" name="confirm_password" placeholder="Confirm Password">
+<a href="/landing"> 
+	<div id="logbutton">
+		Sign Up
+	</div>
+</a>
+<div id="login">
+	
+		<form method="POST" action="/login">
+			Log In<br>
+		<input type="text" name="username">
+			<br><br>
+		<input type="password" name="password" placeholder="Password">
+			<br><br>
+		<input type="password" name="confirm_password" placeholder="Confirm Password">
+			<br><br>
 
 	<input type="submit">
 
-</form>
+	</form>
+	<br>
+</div>
