Fixed the user input text

--- a/views/landing.erb
+++ b/views/landing.erb
@@ -2,7 +2,7 @@
    <p>Post Here:</p>
   <div id="post_wrapper">
     <form action="/landing" method="POST">
-     <textarea id="post_box" name="[posts]user_post" placeholder "Enter Text Here..."></textarea>
+     <textarea id="post_box" name="[post]user_post" placeholder "Enter Text Here..."></textarea>
     <div id="button_format"> 
       <input type="submit">
     </div>
@@ -11,9 +11,7 @@
 </div>
 
 
-<!--  <%= @all_posts.reverse.each do |p| %>
- -->
+
+
 
 <%= :posts %>
-
-<!-- <%= :end %> -->
