linked login page to landing page

--- a/Public/styles/archblog.css
+++ b/Public/styles/archblog.css
@@ -56,7 +56,32 @@ form {
 
 /*LANDING*/
 
+#page_wrapper {
+	width: 1200px;
+ 	height: 850px;
+ 	margin: auto;
+}
 
+#post_wrapper {
+ height: 100px;
+ width: 580px;
+ margin: auto;
+ font: Bodoni MT W01 Book;
+ background: lightblue;
+}
+
+#post_box {
+ border: 1px red solid;
+ width: 560px;
+ height: 60px;
+ resize: none;
+ margin: 5px;
+}
+
+#button_format {
+
+
+}
 
 /*PROFILE*/
 
