made changes to archblog.rb.  updated login, signup, and landing pages.

--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,3 +1,15 @@
-<p>
-	Congratulations! You are a winner.
-</p>
+  <div id="landingform">
+
+  <form method='POST' action='/signup'>
+    Email:
+    <input type="text" name="[user]email">
+    <br><br>
+    Username:
+    <input type="text" name="[user]username">
+    <br><br>
+    Password:
+    <input type="password" name="[user]password">
+    <br><br>
+    <input type="submit">
+  </form>
+</div>
