--- a/Public/styles/archblog.css
+++ b/Public/styles/archblog.css
@@ -13,10 +13,20 @@ body {
 
 /*LOGIN*/
 
-
-
+#landingform {
+  width: 400px;
+  height: 425px;
+  background-color: #CCCCCC;
+  margin: 0px auto;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  border-radius: 10px;
+  border: solid gray 2px;
+  font-size: 24px;
+}
 
 /*LANDING*/
+
 #page_wrapper {
   width: 1200px;
   height: 850px;
@@ -52,6 +62,26 @@ body {
 
 /*SIGNUP*/
 
+#login {
+    background-color: #CCCCCC ;
+    margin: 0px auto;
+    border-radius: 10px;
+    border: solid gray 2px;
+    font-size: 24px;
+    width: 400px;
+    font-size: 24px;
+    text-align: center;
+}
+#logbutton {
+    float: right;
+    border: solid gray 2px;
+    padding: 5px;
+    border-radius: 5px;
+    position: fixed;
+    margin-left: 1125px;
+    margin-top: 0px;
+
+}
 
 
 
