--- a/views/landing.erb
+++ b/views/landing.erb
@@ -2,16 +2,13 @@
    <p>Post Here:</p>
   <div id="post_wrapper">
     <form action="/landing" method="POST">
-     <textarea id="post_box" name="[post]user_post" placeholder "Enter Text Here..."></textarea>
+     <textarea id="post_box" name="[post]body" placeholder="Enter Text Here..."></textarea>
     <div id="button_format"> 
       <input type="submit">
     </div>
     </form>
   </div>
+
 </div>
 
-
-
-
-
-<%= :posts %>
+<% post %>
